--- a/web ui/web-ui-9-virtual-adventure/style.css
+++ b/web ui/web-ui-9-virtual-adventure/style.css
@@ -12,6 +12,7 @@
   background-color: #e9f1f4;
   position: relative;
   z-index: -1;
+  width: 1408px;
 }
 .hero-container {
   background-color: #fff;
