--- a/web ui/web-ui-10-pakaton/style.css
+++ b/web ui/web-ui-10-pakaton/style.css
@@ -5,7 +5,9 @@
   box-sizing: border-box;
   font-family: "Montserrat";
 }
-
+.app {
+  width: 1408px;
+}
 .hero-section {
   position: relative;
 }
