--- a/web ui/web-ui-12-olive-oil/style.css
+++ b/web ui/web-ui-12-olive-oil/style.css
@@ -8,7 +8,7 @@
 .main {
   background-color: #afafaf;
   padding: 80px 70px;
-  width: 100vw;
+  width: 1408px;
 }
 .main-container {
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
